# WebScrapeToolkit

./: .replit  AI_ENHANCEMENT_README.md  ARCHITECTURE.md  PRD_WebScraper  README.md  ai_enhanced_scraper.py  ai_examples.py  ai_integration_guide.py  chatbot.py  database_service.py  main.py  models.py  pyproject.toml  scraper_examples.py  scraping_results.json  utils.py  web_scraper.py  web_ui.py
templates/: chat.html  scraper.html
