[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.1",
    "beautifulsoup4>=4.13.4",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "lxml>=5.4.0",
    "openai>=1.82.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
]
